<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_state_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michael.amazebyndukweikomichaelcurcio.FinishActivity">

    <TextView
        android:text="@string/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="61dp"
        android:id="@+id/winMsg" />

    <TextView
        android:text="@string/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/pathLen"
        android:layout_below="@+id/batteryLevel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:text="@string/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/batteryLevel"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/winMsg"
        android:layout_alignStart="@+id/pathLen" />

    <TextView
        android:text="@string/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/pathLen"
        android:layout_alignStart="@+id/pathLen"
        android:layout_marginTop="93dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="47dp"
        android:layout_marginTop="14dp"
        android:text="@string/finishButton"
        android:id="@+id/button" />
</RelativeLayout>
